// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[` 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;

exports[`10.c.1 Satellite > 10.c.1.2 with radius 42000k 1`] = `
<div
  class="satellite"
>
  <div
    class="satellite__radius"
  >
    <span>
      Радиус орбиты спутника:
    </span>
    <input
      class="form-control"
      type="text"
    />
    <span>
      км
    </span>
  </div>
  <div
    class="satellite__speed"
  >
    <h3>
      Требуемая скорость спутника:
    </h3>
    <div>
      Infinity м/с 
    </div>
    <img
      src="https://mediasat.info/wp-content/uploads/2015/06/sat-orbit.jpg"
    />
  </div>
</div>
`;

exports[`10.h.2 Carousel > 10.h.2.2 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel > 10.h.2.3 next button click 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel > 10.h.2.4 next button one more click 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel > 10.h.2.5 next button one more click 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel > 10.h.2.6 prev button click 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel > 10.h.2.7 prev button one more click 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel > 10.h.2.8 next button click 1`] = `
<div
  data-v-app=""
>

  <!--Начало-->
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
    >

      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
        />
      </div>
      <div
        class="carousel-item"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
        />
      </div>
      <div
        class="carousel-item active"
      >
        <img
          class="d-block w-100"
          src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
        />
      </div>

    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        class="carousel-control-next-icon"
      />
    </button>
  </div>
  <!--Конец-->

</div>
`;

exports[`10.h.2 Carousel 10.h.2.3 next button click 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;

exports[`10.h.2 Carousel 10.h.2.4 next button one more click 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;

exports[`10.h.2 Carousel 10.h.2.5 next button one more click 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;

exports[`10.h.2 Carousel 10.h.2.6 prev button click 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;

exports[`10.h.2 Carousel 10.h.2.7 prev button one more click 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;

exports[`10.h.2 Carousel 10.h.2.8 next button click 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-inner"
  >
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-1.jpg"
      />
    </div>
    <div
      class="carousel-item"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-2.jpg"
      />
    </div>
    <div
      class="carousel-item active"
    >
      <img
        class="d-block w-100"
        src="/Lessons/10. Frameworks 101. Vue.js/Homework/Task 2. Carousel Vue/assets/carousel-3.jpg"
      />
    </div>
  </div>

  <button
    class="carousel-control-prev"
  >
    <span
      class="carousel-control-prev-icon"
    />
  </button>

  <button
    class="carousel-control-next"
  >
    <span
      class="carousel-control-next-icon"
    />
  </button>
</div>
`;
